@@ -1,178 +1,187 @@
 package student;
 
 import java.io.IOException;
-import java.io.PrintWriter;
 import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.nio.file.Path;
+import java.util.HashSet;
+import java.util.Set;
+import java.util.List;
 import java.util.stream.Stream;
 
-/**
- * The GameList class manages a collection of selected board games.
- * It provides methods to add, remove, count, and retrieve games,
- * as well as saving and clearing the list.
- */
-
 public class GameList implements IGameList {
+    /** List to store the game names.*/
+    private Set<String> list;
+
+    /** Delimiter for adding by range. */
+    private static final String ADD_DELIM = "-";
 
     /**
      * Constructor for the GameList.
      */
-    private Set<BoardGame> selectedGames;
-
-    /**
-     * Constructs a new GameList with an empty set of selected board games.
-     */
     public GameList() {
-        this.selectedGames = new HashSet<>();
+        list = new HashSet<>();
     }
 
-    /**
-     * Retrieves the names of all selected games in a sorted order.
-     *
-     * @return A list of game names sorted in case-insensitive order.
-     * @throws UnsupportedOperationException if the game list is empty.
-     */
     @Override
     public List<String> getGameNames() {
-        // TODO Auto-generated method stub
-        if (selectedGames.isEmpty()) {
-            throw new UnsupportedOperationException("No games in the list.");
-        }
-        return selectedGames.stream()
-                .map(BoardGame::getName)
-                .sorted(String.CASE_INSENSITIVE_ORDER)
-                .collect(Collectors.toList());
+        return List.copyOf(list);
     }
 
-    /**
-     * Clears all games from the list.
-     */
     @Override
     public void clear() {
-        // TODO Auto-generated method stub
-        selectedGames.clear();
+        list.clear();
     }
 
-    /**
-     * Returns the number of games currently in the list.
-     *
-     * @return The count of games in the list.
-     */
     @Override
     public int count() {
-        // TODO Auto-generated method stub
-        return selectedGames.size();
+        return list.size();
     }
 
-    /**
-     * Saves the current list of game names to a specified file.
-     *
-     * @param filename The name of the file to save the game list to.
-     * @throws UnsupportedOperationException if an I/O error occurs during saving.
-     */
     @Override
     public void saveGame(String filename) {
-        // TODO Auto-generated method stub
-        try (PrintWriter writer = new PrintWriter(Files.newBufferedWriter(Paths.get(filename)))) {
-            for (BoardGame game : selectedGames) {
-                writer.println(game.getName());
-            }
+        Path filePath = Path.of(filename);
+        try {
+            Files.write(filePath, getGameNames());
+            System.out.println("File saved!");
         } catch (IOException e) {
-            throw new UnsupportedOperationException("Error saving game list.");
+            System.out.println("File not saved!");
+            e.printStackTrace();
         }
     }
 
-    /**
-     * Adds a game to the list if it exists in the provided stream.
-     *
-     * @param str      The name of the game to add.
-     * @param filtered The stream of board games to search for the game.
-     * @throws UnsupportedOperationException if the game is not found in the stream.
-     */
     @Override
     public void addToList(String str, Stream<BoardGame> filtered) throws IllegalArgumentException {
         if (str == null || filtered == null) {
-            throw new IllegalArgumentException("Input cannot be null.");
+            throw new IllegalArgumentException();
         }
 
-        List<BoardGame> gameList = filtered.toList();
+        str = str.trim();
+        List<BoardGame> filteredList = filtered.toList();
 
-        if (gameList.isEmpty()) {
-            throw new IllegalArgumentException("Game list cannot be empty.");
+        if (filteredList.isEmpty()) {
+            throw new IllegalArgumentException();
         }
 
-        // Add all games
-        if (str.equalsIgnoreCase("ALL")) {
-            selectedGames.addAll(gameList);
+        // add  by string - all
+        if (str.equalsIgnoreCase(IGameList.ADD_ALL)) {
+            list.addAll(filteredList.stream().map(BoardGame::getName).toList());
             return;
         }
 
-        // Add by index
-        try {
-            int index = Integer.parseInt(str);
-            if (index <= 0 || index > gameList.size()) {
-                throw new IllegalArgumentException("Invalid index.");
+        // add by string - name
+        for (BoardGame game : filteredList) {
+            if (game.getName().equalsIgnoreCase(str)) {
+                list.add(game.getName());
+                return; // added
             }
-            selectedGames.add(gameList.get(index - 1));
-            return;
-        } catch (NumberFormatException ignored) {
-            // Continue to name matching if not a number
         }
 
-        if (str.contains("-")) {
-            String[] parts = str.split("-");
-            if (parts.length != 2) {
-                throw new IllegalArgumentException("Invalid range format.");
+        // add by number - range
+        if (str.contains(ADD_DELIM)) {
+            String[] range = str.split(ADD_DELIM);
+            if (range.length != 2) {
+                throw new IllegalArgumentException();
             }
 
             try {
-                int start = Integer.parseInt(parts[0]);
-                int end = Integer.parseInt(parts[1]);
+                int l = Integer.parseInt(range[0]);  // start index
+                int r = Integer.parseInt(range[1]);  // end index
 
-                if (start <= 0 || end <= 0 || start > gameList.size()) {
-                    throw new IllegalArgumentException("Invalid range.");
+                if (l > r || l <= 0) {
+                    throw new IllegalArgumentException();
+                }
+                if (l > filteredList.size()) {
+                    throw new IllegalArgumentException();
+                }
+                if (r > filteredList.size()) {
+                    r = filteredList.size();
                 }
 
-                if (end > gameList.size()) {
-                    end = gameList.size();
-                }
-
-                for (int i = start; i <= end; i++) {
-                    selectedGames.add(gameList.get(i - 1));
+                for (int i = l; i <= r; i++) {
+                    list.add(filteredList.get(i - 1).getName());
                 }
                 return;
             } catch (NumberFormatException e) {
-                throw new IllegalArgumentException("Invalid range values.");
+                throw new IllegalArgumentException();
             }
         }
 
-        // Add by name
-        Optional<BoardGame> game = gameList.stream()
-                .filter(g -> g.getName().trim().equalsIgnoreCase(str.trim()))
-                .findFirst();
+        // add by number - index
+        try {
+            int idx = Integer.parseInt(str);
+            if (idx <= 0 || idx > filteredList.size()) {
+                throw new IllegalArgumentException();
+            }
 
-        if (game.isPresent()) {
-            selectedGames.add(game.get());
-        } else {
-            throw new IllegalArgumentException("Game not found.");
+            list.add(filteredList.get(idx - 1).getName());
+        } catch (NumberFormatException e) {
+            throw new IllegalArgumentException();
         }
     }
 
-
-
-    /**
-     * Removes a game from the list if it exists.
-     *
-     * @param str The name of the game to remove.
-     * @throws UnsupportedOperationException if the game is not found in the list.
-     */
     @Override
     public void removeFromList(String str) throws IllegalArgumentException {
-        boolean removed = selectedGames.removeIf(game -> game.getName().equalsIgnoreCase(str.trim()));
-        if (!removed) {
-            throw new IllegalArgumentException("Game not found in the list."); // ✅ Fix: Use IllegalArgumentException
+        str = str.trim();
+        List<String> gameNames = getGameNames();
+
+        //remove by string - all
+        if (str.equalsIgnoreCase(IGameList.ADD_ALL)) {
+            clear();
+            return;
+        }
+
+        if (list.isEmpty()) {
+            throw new IllegalArgumentException();
+        }
+
+        // remove by string - single name
+        for (String name : gameNames) {
+            if (name.equalsIgnoreCase(str)) {
+                list.remove(name);
+                return;
+            }
+        }
+
+        // remove by number - range
+        if (str.contains(ADD_DELIM)) {
+            String[] range = str.split(ADD_DELIM);
+            if (range.length != 2) {
+                throw new IllegalArgumentException();
+            }
+
+            try {
+                int l = Integer.parseInt(range[0]);  // start index
+                int r = Integer.parseInt(range[1]);  // end index
+
+                if (l > r || l <= 0) {
+                    throw new IllegalArgumentException();
+                }
+                if (l > count()) {
+                    throw new IllegalArgumentException();
+                }
+                if (r > count()) {
+                    r = count();
+                }
+
+                for (int i = l; i <= r; i++) {
+                    list.remove(gameNames.get(i - 1));
+                }
+                return;
+            } catch (NumberFormatException e) {
+                throw new IllegalArgumentException();
+            }
+        }
+
+        // remove by number - index
+        try {
+            int idx = Integer.parseInt(str);
+            if (idx <= 0 || idx > count()) {
+                throw new IllegalArgumentException();
+            }
+
+            list.remove(gameNames.get(idx - 1));
+        } catch (NumberFormatException e) {
+            throw new IllegalArgumentException();
         }
     }
 }
